--- a/tests/qgis/QGIS/QGIS3.ini
+++ b/tests/qgis/QGIS/QGIS3.ini
@@ -1,6 +1,9 @@
 [Processing]
 Configuration\SCRIPTS_FOLDERS=/src/tests/wpstests/scripts
 
+[Projections]
+defaultBehavior=
+
 [Qgis]
 compileExpressions=true
 
