--- a/tests/qgis/QGIS/QGIS3.ini
+++ b/tests/qgis/QGIS/QGIS3.ini
@@ -1,4 +1,5 @@
 [Processing]
+Configuration\MODELS_FOLDER=/src/tests/wpstests/models
 Configuration\SCRIPTS_FOLDERS=/src/tests/wpstests/scripts
 
 [Projections]
