Pass 'fallback' keyword in config service

--- a/tests/qgis/QGIS/QGIS3.ini
+++ b/tests/qgis/QGIS/QGIS3.ini
@@ -1,5 +1,6 @@
 [Processing]
 Configuration\MODELS_FOLDER=/src/tests/wpstests/models
+Configuration\OTB_ACTIVATE=false
 Configuration\SCRIPTS_FOLDERS=/src/tests/wpstests/scripts
 
 [Projections]
