Set referer filter as option only
    Combine referer filter with ip filter.

--- a/tests/profiles/wms/rejectips.yml
+++ b/tests/profiles/wms/rejectips.yml
@@ -10,3 +10,10 @@ rejectips:
     - 192.168.2.0/24
     - 172.10.0.0/24
 
+referer:
+  allowed_referers:
+    - 'referer/ok'
+  parameters:
+    MAP: france_parts.qgs
+
+
