Enhance profile urls syntax
    - Allow disabling passing urls as 'Qgis-Service-Url'

--- a/tests/profiles/wms/proxyurl.yml
+++ b/tests/profiles/wms/proxyurl.yml
@@ -10,3 +10,13 @@ proxyurls:
     WMS: 'https://wms.url/path/'
     WFS: 'https://wfs.url/path/'
 
+proxy_no_service_urls:
+  services: 
+    - WMS
+  parameters:
+    MAP: france_parts.qgs
+  urls:
+    WMS:
+      url: 'https://wms.url/path/'
+      serviceURL: no
+
