--- a/tests/unittests/pytest.ini
+++ b/tests/unittests/pytest.ini
@@ -1,4 +1,9 @@
 [pytest]
 addopts= --junit-xml=__output__/junit.xml
 junit_family=xunit2
+log_cli=1
+log_cli_level=critical
+norecursedirs =
+    .*
+    __*
 
