--- a/tests/qgis/QGIS/QGIS3.ini
+++ b/tests/qgis/QGIS/QGIS3.ini
@@ -1,6 +1,7 @@
 [Processing]
 Configuration\MODELS_FOLDER=/src/tests/wpstests/models
 Configuration\OTB_ACTIVATE=false
+Configuration\PREFER_FILENAME_AS_LAYER_NAME=false
 Configuration\SCRIPTS_FOLDERS=/src/tests/wpstests/scripts
 
 [Projections]
