--- a/tests/docker/docker-compose.wps.yml
+++ b/tests/docker/docker-compose.wps.yml
@@ -9,12 +9,14 @@ services:
       PIP_CACHE_DIR: /.cache
       USER: ${USER}
       WORKERS: ${WORKERS}
-      QGSRV_CONTRIB_PROFILES_CONFIG: 
+      QGSWPS_CONTRIB_PROFILES_CONFIG: /src/tests/profiles.yml
+      QGSWPS_SERVER_ENABLE_FILTERS: 'yes'
       QGSWPS_CACHE_ROOTDIR: /src/tests/data 
       QGSWPS_PROCESSING_PROVIDERS_MODULE_PATH: /src/tests/wpstests
       QGSWPS_SERVER_WORKDIR: /srv/data
       QGSWPS_SERVER_RESTARTMON: /src/.qgis-restart
       QGSWPS_LOGLEVEL: DEBUG
+      QGSWPS_SERVER_HTTP_PROXY: 'yes'
       QGSWPS_REDIS_HOST: redis
       QGIS_OPTIONS_PATH: /src/tests/qgis
       PYTEST_ADDOPTS: ${PYTEST_ADDOPTS}
@@ -24,7 +26,7 @@ services:
       - ${SRCDIR}:/src
       - ${PWD}/.local:/.local
       - ${PWD}/.cache:/.cache
-      - ${PWD}/__workdir__:/srv/data
+      - ${PWD}/.workdir:/srv/data
     ports:
       - ${SERVER_HTTP_PORT}:8080
   redis:
