Allow /store/ endpoint

--- a/tests/docker/Makefile
+++ b/tests/docker/Makefile
@@ -41,7 +41,7 @@ env: local
 	@[ ! -d "$(SERVER_SRC)" ] && echo "[ERROR] 'SERVER_SRC' not defined" && exit 1
 	@cat <<-EOF > .env
 		SERVER_SRC=$(SERVER_SRC)
-		WPS_SERVER_SRC=$(WPS_SERVER_SRC)
+		WPS_SERVER_SRC=$(SERVER_SRC)
 		SRCDIR=$(SRCDIR)
 		WORKERS=$(WORKERS)
 		BECOME_USER=$(BECOME_USER)
